# snatch

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  config.json  config.template.json  env.example  pyproject.toml  rahma1203.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
customs/: WHAT_TO_PUT_HERE.txt
customs/directory_listing/: WHAT_TO_PUT_HERE.txt
customs/extract_metadata/: WHAT_TO_PUT_HERE.txt
docs/: CODE_OF_CONDUCT.md  REQUIREMENTS.md
docs/community/: FAQ.md  features.md
docs/dev/: CONTRIBUTING.md  TO-DO-LIST.md
docs/errors/: modules.md
docs/getting-started/: quickstart.md
docs/help/: commands.md  welcome.md
docs/help/commands/: ai.md  dirlist.md  download.md  emseek.md  exdata.md  imganal.md  portscan.md  pwdgen.md  scraper.md  settings.md  trackurl.md  whatsapp.md  wifiscan.md
docs/interface/: resources.md
examples/: person-full-search.json
portscans/: fpiespablopicasso_es_open_ports.txt
src/: cli.py  config.json  worker.py
src/downloader/: worker.py
src/lib/: __init__.py  clients.py  colors.py  config.py  data.py
src/lib/files/: domain_list.json
src/portscanner/: worker.py
src/services/: x_twitter.py  youtube.py
src/services/ai/: llm.py  tools.py  worker.py
src/services/directory_listing/: worker.py
src/services/downloader/: converters.py  downloader.py  worker.py
src/services/emseek/: basics.py  gen_emails_from_info.py  gen_emails_from_pattern.py  gen_work_email.py  scanner.py  worker.py  (+3 more)
src/utils/: basics.py  converters.py  downloader.py  snatch.py
(+114 files in other folders)
