[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "snatch"
version = "0"
description = "📥 AI OSINT - Capture, download, and enjoy."
license = "AGPL-3.0"
authors = [ "FJRG2007", "lizardwine" ]
keywords = [ "artificial intelligence", "osint", "reconnaissance", "information gathering" ]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/FJRG2007/snatch/issues"

[tool.poetry.scripts]
snatch = "src.worker:main"