[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snatch"
version = "0.1.0"
description = "📥 AI OSINT - Capture, download, and enjoy."
license = {text = "AGPL-3.0"}
authors = [{name = "FJRG2007"}]
keywords = ["artificial intelligence", "osint", "reconnaissance", "information gathering"]

[project.urls]
"Bug Tracker" = "https://github.com/FJRG2007/snatch/issues"

[project.scripts]
snatch = "src.cli:main"